@@ -34,9 +34,8 @@
             "rct2.scenery_wall.wbr3",
             "$DAT:0C58B503|IREWBR3C",
             "rct2.scenery_wall.wallmm16",
-            "$DAT:09F55A03|HALLFEN1",
             "rct2.scenery_wall.wallmm17",
-            "$DAT:09F55A03|HALLFEN2",
+            "fidwell.scenery_wall.wallmm17",
             "rct1.scenery_wall.wooden_fence_red"
         ],
         "priority": 4
